common/force-app/main/default/objects/Contact/fields/Account_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact_Name__c</fullName>
    <formula>( FirstName + &quot; &quot; + LastName ) =  Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name = Contact Name</label>
    <type>Checkbox</type>
</CustomField>