common/force-app/main/default/objects/Contact/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Unique Account Number</description>
    <label>Account Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>