common/force-app/main/default/objects/Contact/fields/AFSL_GS__c.field-meta.xml
<CustomField>
    <fullName>AFSL_GS__c</fullName>
    <formula>Owner.AFSL_GS__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AFSL_GS</label>
    <type>Text</type>
</CustomField>