common/force-app/main/default/objects/Contact/fields/AFSL_VC__c.field-meta.xml
<CustomField>
    <fullName>AFSL_VC__c</fullName>
    <formula>Owner.AFSL_VC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AFSL VC</label>
    <type>Text</type>
</CustomField>