common/force-app/main/default/objects/Contact/fields/Background_Information__c.field-meta.xml
<CustomField>
    <fullName>Background_Information__c</fullName>
    <inlineHelpText>Update important information about this person or account.</inlineHelpText>
    <label>Background Information</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>