common/force-app/main/default/objects/Contact/fields/Birthdate_DO_NOT_USE__c.field-meta.xml
<CustomField>
    <fullName>Birthdate_DO_NOT_USE__c</fullName>
    <description>Custom field to capture Birthdate info from lead. Through workflow update standard field on Contact</description>
    <label>Birthdate DO NOT USE</label>
    <type>Date</type>
</CustomField>