common/force-app/main/default/objects/Contact/fields/CIF_Person_Account__c.field-meta.xml
<CustomField>
    <fullName>CIF_Person_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CIF Person Account</label>
    <type>Checkbox</type>
</CustomField>