common/force-app/main/default/objects/Contact/fields/Company_Sector__c.field-meta.xml
<CustomField>
    <fullName>Company_Sector__c</fullName>
    <label>Company Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FINTECH</fullName>
            </value>
            <value>
                <fullName>AGTECH</fullName>
            </value>
            <value>
                <fullName>FOODTECH</fullName>
            </value>
            <value>
                <fullName>PROPTECH</fullName>
            </value>
            <value>
                <fullName>EDTECH</fullName>
            </value>
            <value>
                <fullName>ARTS &amp; ENTERTAINMENT</fullName>
            </value>
            <value>
                <fullName>MEDTECH</fullName>
            </value>
            <value>
                <fullName>IMPACT</fullName>
            </value>
            <value>
                <fullName>PROPERTY DEVELOPMENT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>