common/force-app/main/default/objects/Contact/fields/Deceased__c.field-meta.xml
<CustomField>
    <fullName>Deceased__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>please check this box is the contact is deceased</inlineHelpText>
    <label>Deceased</label>
    <type>Checkbox</type>
</CustomField>