common/force-app/main/default/objects/Contact/fields/Desired_Bathrooms_2__c.field-meta.xml
<CustomField>
    <fullName>Desired_Bathrooms_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desired Bathrooms 2+</label>
    <type>Checkbox</type>
</CustomField>