common/force-app/main/default/objects/Contact/fields/Desired_Beds_3__c.field-meta.xml
<CustomField>
    <fullName>Desired_Beds_3__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desired Beds 3+</label>
    <type>Checkbox</type>
</CustomField>