common/force-app/main/default/objects/Contact/fields/Desired_Car_Garage_2__c.field-meta.xml
<CustomField>
    <fullName>Desired_Car_Garage_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Desired Car Garage 2+</label>
    <type>Checkbox</type>
</CustomField>