common/force-app/main/default/objects/Contact/fields/Do_you_need_to_Sell_to_Buy__c.field-meta.xml
<CustomField>
    <fullName>Do_you_need_to_Sell_to_Buy__c</fullName>
    <label>Do you need to Sell to Buy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>