common/force-app/main/default/objects/Contact/fields/EIC_Property__c.field-meta.xml
<CustomField>
    <fullName>EIC_Property__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EIC Property</label>
    <type>Checkbox</type>
</CustomField>