common/force-app/main/default/objects/Contact/fields/Evergage_venturecrowd_Action_Visit_Learn__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Action_Visit_Learn__c</fullName>
    <description>Uses of action &apos;Visit Learn&apos; in last business cycle</description>
    <label>Evergage Uses of Action &apos;Visit Learn&apos; (V</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>