common/force-app/main/default/objects/Contact/fields/Evergage_venturecrowd_FirstActivity__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_FirstActivity__c</fullName>
    <description>First activity with application</description>
    <label>Evergage First Visit (VentureCrowd)</label>
    <type>DateTime</type>
</CustomField>