common/force-app/main/default/objects/Contact/fields/Evergage_venturecrowd_Link__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Link__c</fullName>
    <description>Link to the Evergage page</description>
    <label>Evergage Link (VentureCrowd)</label>
    <type>Url</type>
</CustomField>