common/force-app/main/default/objects/Contact/fields/Evergage_venturecrowd_Segment_1tEp1__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Segment_1tEp1__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;Anonymous Retail Investor&apos;</description>
    <label>Evergage In Segment &apos;Anonymous Retail I&apos;</label>
    <type>Checkbox</type>
</CustomField>