common/force-app/main/default/objects/Contact/fields/Evergage_venturecrowd_Segment_6VHgz__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Segment_6VHgz__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;Wholesale Investor - Financially Mature&apos;</description>
    <label>Evergage In Segment &apos;Wholesale Investor&apos;</label>
    <type>Checkbox</type>
</CustomField>