common/force-app/main/default/objects/Contact/fields/Evergage_venturecrowd_Segment_mBGaS__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Segment_mBGaS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;Anonymous Wholesale Investor&apos;</description>
    <label>Evergage In Segment &apos;Anonymous Wholesal&apos;</label>
    <type>Checkbox</type>
</CustomField>