common/force-app/main/default/objects/Contact/fields/Evergage_venturecrowd_Segment_Nfh3d__c.field-meta.xml
<CustomField>
    <fullName>Evergage_venturecrowd_Segment_Nfh3d__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is a member of segment &apos;Email Address Known&apos;</description>
    <label>Evergage In Segment &apos;Email Address Know&apos;</label>
    <type>Checkbox</type>
</CustomField>