common/force-app/main/default/objects/Contact/fields/Experience_Reason__c.field-meta.xml
<CustomField>
    <fullName>Experience_Reason__c</fullName>
    <label>Experience Reason</label>
    <type>TextArea</type>
</CustomField>