common/force-app/main/default/objects/Contact/fields/Facebook_Profile__c.field-meta.xml
<CustomField>
    <fullName>Facebook_Profile__c</fullName>
    <label>Facebook Profile</label>
    <type>Url</type>
</CustomField>