common/force-app/main/default/objects/Contact/fields/FSG__c.field-meta.xml
<CustomField>
    <fullName>FSG__c</fullName>
    <formula>HYPERLINK( Owner.Financial_Services_Guide__c , &apos;Financial Services Guide&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FSG</label>
    <type>Text</type>
</CustomField>