common/force-app/main/default/objects/Contact/fields/GWS__c.field-meta.xml
<CustomField>
    <fullName>GWS__c</fullName>
    <formula>HYPERLINK( Owner.General_Warning_Statement__c, &apos;General Warning Statement&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GWS</label>
    <type>Text</type>
</CustomField>