common/force-app/main/default/objects/Contact/fields/Instagram_Profile__c.field-meta.xml
<CustomField>
    <fullName>Instagram_Profile__c</fullName>
    <label>Instagram Profile</label>
    <type>Url</type>
</CustomField>