common/force-app/main/default/objects/Contact/fields/Institutional_Investor__c.field-meta.xml
<CustomField>
    <fullName>Institutional_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Institutional Investor</label>
    <type>Checkbox</type>
</CustomField>