common/force-app/main/default/objects/Contact/fields/Interested_Location__c.field-meta.xml
<CustomField>
    <fullName>Interested_Location__c</fullName>
    <label>Interested Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>