common/force-app/main/default/objects/Contact/fields/Investment_Interest__c.field-meta.xml
<CustomField>
    <fullName>Investment_Interest__c</fullName>
    <label>Investment Interest</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Property</fullName>
            </value>
            <value>
                <fullName>Ventures</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>