common/force-app/main/default/objects/Contact/fields/Investment_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Investment_Knowledge__c</fullName>
    <label>Investment Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>Still Learning</fullName>
            </value>
            <value>
                <fullName>Confident</fullName>
            </value>
            <value>
                <fullName>Sophisticated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>