common/force-app/main/default/objects/Contact/fields/Minimum_Price_Range__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Price_Range__c</fullName>
    <label>Minimum Price Range</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>