common/force-app/main/default/objects/Contact/fields/Name_Pronunciation__c.field-meta.xml
<CustomField>
    <fullName>Name_Pronunciation__c</fullName>
    <inlineHelpText>This field will be exclusively used by internal users in CRC/IM team only.(Only for internal purpose)</inlineHelpText>
    <label>Name Pronunciation</label>
    <length>20</length>
    <type>Text</type>
</CustomField>