common/force-app/main/default/objects/Contact/fields/No_Related_Account__c.field-meta.xml
<CustomField>
    <fullName>No_Related_Account__c</fullName>
    <label>No. Related Account</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>