common/force-app/main/default/objects/Contact/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Investment Persona (RFM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>The Novice</fullName>
                <color>#33FFFF</color>
                <label>The Novice</label>
            </value>
            <value>
                <fullName>The Wealth Creator</fullName>
                <color>#33FFFF</color>
                <label>The Wealth Creator</label>
            </value>
            <value>
                <fullName>The Sharp Shooter</fullName>
                <color>#33FFFF</color>
                <label>The Sharp Shooter</label>
            </value>
            <value>
                <fullName>The Grand Designers</fullName>
                <color>#333333</color>
                <label>The Grand Designers</label>
            </value>
            <value>
                <fullName>The Conscious Investor</fullName>
                <color>#333333</color>
                <label>The Conscious Investor</label>
            </value>
            <value>
                <fullName>The Lifestyle Maintainer</fullName>
                <color>#333333</color>
                <label>The Lifestyle Maintainer</label>
            </value>
            <value>
                <fullName>Conscious Investor</fullName>
            </value>
            <value>
                <fullName>Grand Designer</fullName>
            </value>
            <value>
                <fullName>Keen Bean</fullName>
            </value>
            <value>
                <fullName>Sharp Shooter</fullName>
            </value>
            <value>
                <fullName>Wealth Creator</fullName>
            </value>
            <value>
                <fullName>ABOUT TO DUMP YOU - VIP</fullName>
            </value>
            <value>
                <fullName>SOULMATE</fullName>
            </value>
            <value>
                <fullName>NEW PASSION</fullName>
            </value>
            <value>
                <fullName>EX-LOVER</fullName>
            </value>
            <value>
                <fullName>ABOUT TO DUMP YOU</fullName>
            </value>
            <value>
                <fullName>BREAKUP</fullName>
            </value>
            <value>
                <fullName>PLATONIC FRIEND</fullName>
            </value>
            <value>
                <fullName>LOVER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>