common/force-app/main/default/objects/Contact/fields/Related_company__c.field-meta.xml
<CustomField>
    <fullName>Related_company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>