common/force-app/main/default/objects/Contact/fields/Self_Identification__c.field-meta.xml
<CustomField>
    <fullName>Self_Identification__c</fullName>
    <label>Self Identification</label>
    <length>50</length>
    <type>Text</type>
</CustomField>