common/force-app/main/default/objects/Contact/fields/SIC_EIC_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>SIC_EIC_Approved_Date__c</fullName>
    <label>SIC/EIC Approved Date</label>
    <type>DateTime</type>
</CustomField>