common/force-app/main/default/objects/Contact/fields/Stage_VC_PC__c.field-meta.xml
<CustomField>
    <fullName>Stage_VC_PC__c</fullName>
    <inlineHelpText>Venture Capital stage investor is interested in</inlineHelpText>
    <label>Stage VC</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Seed</fullName>
            </value>
            <value>
                <fullName>Seed</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Series A</fullName>
            </value>
            <value>
                <fullName>Pre-IPO</fullName>
            </value>
            <value>
                <fullName>Secondary Market</fullName>
            </value>
            <value>
                <fullName>Series B</fullName>
            </value>
            <value>
                <fullName>Series C</fullName>
            </value>
            <value>
                <fullName>Fixed Income</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>