common/force-app/main/default/objects/Contact/fields/Survey_Comments__c.field-meta.xml
<CustomField>
    <fullName>Survey_Comments__c</fullName>
    <label>Survey Comments</label>
    <type>TextArea</type>
</CustomField>