common/force-app/main/default/objects/Contact/fields/Target_Raise_Size__c.field-meta.xml
<CustomField>
    <fullName>Target_Raise_Size__c</fullName>
    <label>Target Raise Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>