common/force-app/main/default/objects/Contact/fields/test_financial_planner__c.field-meta.xml
<CustomField>
    <fullName>test_financial_planner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>test financial planner</label>
    <type>Checkbox</type>
</CustomField>