common/force-app/main/default/objects/Contact/fields/Top_Investor__c.field-meta.xml
<CustomField>
    <fullName>Top_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>⭐Top Investor</label>
    <type>Checkbox</type>
</CustomField>