common/force-app/main/default/objects/Contact/fields/Ts_Cs__c.field-meta.xml
<CustomField>
    <fullName>Ts_Cs__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in VC Investor Portal</description>
    <inlineHelpText>Form Submitted Agrress to the Tc &amp; Cs.</inlineHelpText>
    <label>Ts &amp; Cs</label>
    <type>Checkbox</type>
</CustomField>