common/force-app/main/default/objects/Contact/fields/Venture_Sector__c.field-meta.xml
<CustomField>
    <fullName>Venture_Sector__c</fullName>
    <label>Venture Sector</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>FinTech</fullName>
            </value>
            <value>
                <fullName>EdTech</fullName>
            </value>
            <value>
                <fullName>MedTech</fullName>
            </value>
            <value>
                <fullName>AgTech</fullName>
            </value>
            <value>
                <fullName>FoodTech</fullName>
            </value>
            <value>
                <fullName>PropTech</fullName>
            </value>
            <value>
                <fullName>Impact</fullName>
            </value>
            <value>
                <fullName>Financial Funds</fullName>
            </value>
            <value>
                <fullName>Property Development</fullName>
            </value>
            <value>
                <fullName>Arts &amp; Entertainment</fullName>
            </value>
            <value>
                <fullName>Venture Capital</fullName>
            </value>
            <value>
                <fullName>Family Office</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>