common/force-app/main/default/objects/Contact/fields/Wholesale__c.field-meta.xml
<CustomField>
    <fullName>Wholesale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wholesale</label>
    <type>Checkbox</type>
</CustomField>