common/force-app/main/default/objects/Contact/recordTypes/VC_Engaged_Contact.recordType-meta.xml
<RecordType>
    <fullName>VC_Engaged_Contact</fullName>
    <active>true</active>
    <description>This contact is Venture Crowd&apos;s</description>
    <label>VC Engaged Contact</label>
</RecordType>