common/force-app/main/default/objects/Contact/recordTypes/VCPP_Engaged_Contact.recordType-meta.xml
<RecordType>
    <fullName>VCPP_Engaged_Contact</fullName>
    <active>true</active>
    <description>This record type is assigned to VCPP</description>
    <label>VCPP Engaged Contact</label>
</RecordType>