common/force-app/main/default/objects/Contact/validationRules/Cannot_Opt_In_For_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Opt_In_For_Email</fullName>
    <active>true</active>
    <errorConditionFormula>HasOptedOutOfEmail = TRUE &amp;&amp;  Email_Opt_In__c = TRUE</errorConditionFormula>
    <errorDisplayField>Email_Opt_In__c</errorDisplayField>
    <errorMessage>A user cannot be both opted in and out for emails.</errorMessage>
</ValidationRule>