common/force-app/main/default/objects/Contact/listViews/All_Engaged_Contacts.listView-meta.xml
<ListView>
    <fullName>All_Engaged_Contacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>Account.Total_Closed_Won_Opps__c</columns>
    <columns>Investment_Interest__c</columns>
    <columns>Investment_Style__c</columns>
    <columns>CONTACT.LAST_ACTIVITY</columns>
    <columns>CONTACT.LEAD_SOURCE</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <filterScope>Everything</filterScope>
    <label>All Engaged Contacts</label>
</ListView>